k8s/cyberchef/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyber-chef
  labels:
    app: cyber-chef
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cyber-chef
  template:
    metadata:
      name: cyber-chef
      labels:
        app: cyber-chef
    spec:
      containers:
        - name: cyber-chef
          image: mpepping/cyberchef:v10.18.9
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
      restartPolicy: Always
