k8s/cyberchef/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cyber
spec:
  type: ClusterIP
  selector:
    app: cyber-chef
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
